fpp_analysis/src/test/redef/component_struct.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/component_struct.fpp:3:8
  |
3 | struct C { }
  |        ^ redefinition of symbol C
  |
 ::: [ local path prefix ]/redef/component_struct.fpp:1:1
  |
1 | passive component C { }
  | ----------------------- previous definition is here

